fixed UI overlapping

--- a/src/components/contactme.css
+++ b/src/components/contactme.css
@@ -3,7 +3,7 @@
   position: absolute;
   flex-direction: column;
   left: 10%;
-  top: 10%;
+  top: -2%;
   align-items: center;
   justify-content: center;
   font-size: 60px;
